@@ -20,17 +20,19 @@ module Searchgasm
         klass.class_eval do
           alias_method_chain :auto_joins, :ordering
           alias_method_chain :order=, :ordering
+          alias_method_chain :sanitize, :ordering
+          attr_reader :priority_order
         end
       end
       
       def auto_joins_with_ordering # :nodoc:
-        @memoized_auto_joins ||= merge_joins(auto_joins_without_ordering, order_by_auto_joins)
+        @memoized_auto_joins ||= merge_joins(auto_joins_without_ordering, order_by_auto_joins, priority_order_by_auto_joins)
       end
       
       def order_with_ordering=(value) # :nodoc
         @order_by = nil
         @order_as = nil
-        self.order_by_auto_joins.clear
+        @order_by_auto_joins = nil
         @memoized_auto_joins = nil
         self.order_without_ordering = value
       end
@@ -65,24 +67,7 @@ module Searchgasm
       # if you haven't explicitly set the order_by option yourself.
       def order_by
         return if order.blank?
-        return @order_by if @order_by
-        
-        # Reversege engineer order, only go 1 level deep with relationships, anything beyond that is probably excessive and not good for performance
-        order_parts = order.split(",").collect do |part|
-          part.strip!
-          part.gsub!(/ (ASC|DESC)$/i, "").gsub!(/(.*)\./, "")
-          table_name = ($1 ? $1.gsub(/[^a-z0-9_]/i, "") : nil)
-          part.gsub!(/[^a-z0-9_]/i, "")
-          reflection = nil
-          if table_name && table_name != klass.table_name
-            reflection = klass.reflect_on_association(table_name.to_sym) || klass.reflect_on_association(table_name.singularize.to_sym)
-            next unless reflection
-            {reflection.name.to_s => part}
-          else
-            part
-          end
-        end.compact
-        @order_by = order_parts.size <= 1 ? order_parts.first : order_parts
+        @order_by ||= order_to_order_by(order)
       end
       
       # Lets you set how to order the data
@@ -95,7 +80,7 @@ module Searchgasm
       #   order_by = [:id, name] # => users.id ASC, user.name ASC
       #   order_by = [:id, {:user_group => :name}] # => users.id ASC, user_groups.name ASC
       def order_by=(value)  
-        self.order_by_auto_joins.clear
+        @order_by_auto_joins = nil
         @memoized_auto_joins = nil
         @order_by = get_order_by_value(value)
         @order = order_by_to_order(@order_by, @order_as || "ASC")
@@ -104,14 +89,62 @@ module Searchgasm
       
       # Returns the joins neccessary for the "order" statement so that we don't get an SQL error
       def order_by_auto_joins
-        @order_by_auto_joins ||= []
-        @order_by_auto_joins.compact!
-        @order_by_auto_joins.uniq!
-        @order_by_auto_joins
+        @order_by_auto_joins ||= build_order_by_auto_joins(order_by)
+      end
+      
+      # Let's you set a priority order. Meaning this will get ordered first before anything else, but is unnoticeable and abstracted out from your regular order. For example, lets say you have a model called Product
+      # that had a "featured" boolean column. You want to order the products by the price, quantity, etc., but you want the featured products to always be first.
+      #
+      # Without a priority order your controller would get cluttered and your code would be much more complicated. All of your order_by_link methods would have to be order_by_link [:featured, :price], :text => "Price"
+      # Your order_by_link methods alternate between ASC and DESC, so the featured products would jump from the top the bottom. It presents a lot of "work arounds". So priority_order solves this.
+      def priority_order=(value)
+        @priority_order = value
+      end
+      
+      # Same as order_by but for your priority order. See priority_order= for more informaton on priority_order.
+      def priority_order_by
+        return if priority_order.blank?
+        @priority_order_by ||= order_to_order_by(priority_order)
+      end
+      
+      # Same as order_by= but for your priority order. See priority_order= for more informaton on priority_order.
+      def priority_order_by=(value)
+        @priority_order_by_auto_joins = nil
+        @memoized_auto_joins = nil
+        @priority_order_by = get_order_by_value(value)
+        @priority_order = order_by_to_order(@priority_order_by, @priority_order_as || "ASC")
+        @priority_order_by
+      end
+      
+      # Same as order_as but for your priority order. See priority_order= for more informaton on priority_order.
+      def priority_order_as
+        return if priority_order.blank?
+        @priority_order_as ||= priority_order =~ /ASC$/i ? "ASC" : "DESC"
+      end
+      
+      # Same as order_as= but for your priority order. See priority_order= for more informaton on priority_order.
+      def priority_order_as=(value)
+        value = value.to_s.upcase
+        raise(ArgumentError, "priority_order_as only accepts a string as ASC or DESC") unless ["ASC", "DESC"].include?(value)
+        @priority_order.gsub!(/(ASC|DESC)/i, value) if !priority_order.blank?
+        @priority_order_as = value
+      end
+      
+      def priority_order_by_auto_joins
+        @priority_order_by_auto_joins ||= build_order_by_auto_joins(priority_order_by)
+      end
+      
+      def sanitize_with_ordering(searching = true)
+        find_options = sanitize_without_ordering(searching)
+        unless priority_order.blank?
+          order_parts = [priority_order, find_options[:order]].compact
+          find_options[:order] = order_parts.join(", ")
+        end
+        find_options
       end
       
       private
-        def order_by_to_order(order_by, order_as, alt_klass = nil, new_joins = [])
+        def order_by_to_order(order_by, order_as, alt_klass = nil)
           k = alt_klass || klass
           table_name = k.table_name
           sql_parts = []
@@ -124,23 +157,49 @@ module Searchgasm
             key = order_by.keys.first
             reflection = k.reflect_on_association(key.to_sym)
             value = order_by.values.first
-            new_joins << key.to_sym
-            sql_parts << order_by_to_order(value, order_as, reflection.klass, new_joins)
+            sql_parts << order_by_to_order(value, order_as, reflection.klass)
           when Symbol, String
-            new_join = build_order_by_auto_joins(new_joins)
-            self.order_by_auto_joins << new_join if new_join
             sql_parts << "#{quote_table_name(table_name)}.#{quote_column_name(order_by)} #{order_as}"
           end
           
           sql_parts.join(", ")
         end
         
-        def build_order_by_auto_joins(joins)
-          return joins.first if joins.size <= 1
-          joins = joins.dup
-          
-          key = joins.shift
-          {key => build_order_by_auto_joins(joins)}
+        def order_to_order_by(order)
+          # Reversege engineer order, only go 1 level deep with relationships, anything beyond that is probably excessive and not good for performance
+          order_parts = order.split(",").collect do |part|
+            part.strip!
+            part.gsub!(/ (ASC|DESC)$/i, "").gsub!(/(.*)\./, "")
+            table_name = ($1 ? $1.gsub(/[^a-z0-9_]/i, "") : nil)
+            part.gsub!(/[^a-z0-9_]/i, "")
+            reflection = nil
+            if table_name && table_name != klass.table_name
+              reflection = klass.reflect_on_association(table_name.to_sym) || klass.reflect_on_association(table_name.singularize.to_sym)
+              next unless reflection
+              {reflection.name.to_s => part}
+            else
+              part
+            end
+          end.compact
+          order_parts.size <= 1 ? order_parts.first : order_parts
+        end
+        
+        def build_order_by_auto_joins(order_by_value)
+          case order_by_value
+          when Array
+            order_by_value.collect { |value| build_order_by_auto_joins(value) }.uniq.compact
+          when Hash
+            key = order_by_value.keys.first
+            value = order_by_value.values.first
+            case value
+            when Hash
+              {key => build_order_by_auto_joins(value)}
+            else
+              key
+            end
+          else
+            nil
+          end
         end
         
         def get_order_by_value(value)
